--- a/advanced_programming/pom.xml
+++ b/advanced_programming/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>kr.ac.halla.ics</groupId>
+	<groupId>kr.ac.halla.ice</groupId>
 	<artifactId>advanced_programming</artifactId>
 	<version>0.1</version>
 	<packaging>jar</packaging>
